# herdr-deck-navigation

./: Cargo.toml  LICENSE  README.md  carousel.html  glass-stack.html  herdr-plugin.toml  mockup.html  navigator.html  open.sh  run.sh
docs/: DESIGN.md  PLAN.md
src/: client.rs  main.rs  model.rs  state.rs  theme.rs  ui.rs
tests/fixtures/: snapshot.json
