[package]
name = "herdr-deck"
version = "0.1.1"
edition = "2021"
description = "Card-style workspace navigator plugin for herdr"
license = "MIT"

[[bin]]
name = "herdr-deck"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
